@@ -1,14 +1,8 @@
-substitution.maxfillin = 3
-
-substitution.binarieswithints = 0
-
-presolve.removeslackvars = 0
-
-presolve.detectlindep = 1
-
 presolve.threads = 1
-
 parallelcols.enabled = 0
-
-
-
+sparsify.enabled = 0
+presolve.removeslackvars = 0
+presolve.detectlindep = 0
+substitution.binarieswithints = 0
+substitution.maxfillin = 3
+probing.maxbadgesize = 15000
