@@ -39,6 +39,7 @@ Fixed bugs
 
 - Input and Output: handle floating point numbers precisely in parsers and writers
 - OPB-Parser: handle additional whitespaces
+- ParallelColDetection: only merge integral parallel columns for integral column scale
 - Probing: eliminate computational overhead in row propagation
 - SimpleSubstitution: correct feasibility tolerances on euclidean coprime substitutions
 - SingletonCols: order effective side changes to avoid invalid infeasibility
